add: styling and some missing content

--- a/src/layout/Navbar/Navbar.scss
+++ b/src/layout/Navbar/Navbar.scss
@@ -14,5 +14,8 @@
     &__link {
         color: $secondary-text-color;
 
+        &:hover {
+            text-decoration: underline;
+        }
     }
 }
