--- a/src/pages/Teachers/teachers.scss
+++ b/src/pages/Teachers/teachers.scss
@@ -1,1 +1,10 @@
 @use '/src/styles/' as *;
+
+.teachers {
+    @include flex(column, center, center);
+    @include page();
+
+    &__heading {
+        @include page-heading();
+    }
+}
