add: form validation and styling

--- a/src/components/ui/Button/Button.scss
+++ b/src/components/ui/Button/Button.scss
@@ -11,7 +11,7 @@
         @include button(secondary);
     }
 
-    &--tertiary {
-        @include button(tertiary);
+    &--disabled {
+        @include button(disabled);
     }
 }
