--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -33,7 +33,7 @@ $font-size-xl: $px32;
 
 $primary-bg-color: #FFFBEB;
 $secondary-bg-color:#495579;
-$tertiary-bg-color: #787b86;
+$tertiary-bg-color: #a0a1a745;
 
 $primary-text-color: #131313;
 $secondary-text-color: #FAFAFA;
