--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -39,6 +39,21 @@ h6 {
   font-family: $title-font;
 }
 
+input,
+button,
+select,
+textarea {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  border: none;
+  border-radius: none;
+  background: none;
+  padding: 0;
+  font: inherit;
+  margin: 0;
+}
+
+
 a {
   color: inherit;
   text-decoration: none;
