--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -21,6 +21,7 @@
 }
 
 @mixin button($type : default) {
+  @include flex(row, center, center);
   font-size: $font-size-s;
   padding: $px8;
   min-width: 130px;
@@ -43,11 +44,28 @@
     }
   }
 
-  @else if $type == tertiary {
+  @else if $type == disabled {
     background-color: $tertiary-bg-color;
+  }
+}
 
-    &:hover {
-      background-color: lighten($tertiary-bg-color, 5%);
+@mixin bp($media) {
+
+  @if $media == tablet {
+    @media screen and (min-width: $break-tablet) {
+      @content;
+    }
+  }
+
+  @else if $media == laptop {
+    @media screen and (min-width: $break-laptop) {
+      @content;
+    }
+  }
+
+  @else if $media == desktop {
+    @media screen and (min-width: $break-desktop) {
+      @content;
     }
   }
 }
@@ -110,23 +128,3 @@
   }
 }
 
-@mixin bp($media) {
-
-  @if $media == tablet {
-    @media screen and (min-width: $break-tablet) {
-      @content;
-    }
-  }
-
-  @else if $media == laptop {
-    @media screen and (min-width: $break-laptop) {
-      @content;
-    }
-  }
-
-  @else if $media == desktop {
-    @media screen and (min-width: $break-desktop) {
-      @content;
-    }
-  }
-}
