--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -28,6 +28,7 @@
         @include flex(column, center, flex-start);
         padding: $default-spacing;
         gap: $px4;
+        width: 100%;
     }
     
     &__course-title {
