--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,11 +11,6 @@ $px20: rem-calc(20px);
 $px24: rem-calc(24px);
 $px32: rem-calc(32px);
 $px40: rem-calc(40px);
-$px48: rem-calc(48px);
-// $px56: rem-calc(56px);
-// $px64: rem-calc(64px);
-// $px72: rem-calc(72px);
-// $px80: rem-calc(80px);
 
 $default-spacing: $px20;
 $double-spacing: $px40;
@@ -27,13 +22,14 @@ $font-size-s: $px16;
 $font-size-m: $px20;
 $font-size-l: $px24;
 $font-size-xl: $px32; 
-// $font-size-xxl: $px40;
 
 // colors
 
 $primary-bg-color: #FFFBEB;
 $secondary-bg-color:#495579;
 $tertiary-bg-color: #a0a1a745;
+$error-color: #ca4a4a;
+
 
 $primary-text-color: #131313;
 $secondary-text-color: #FAFAFA;
